--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "consign": "^0.1.6",
     "express": "^4.15.4",
+    "node-omxplayer": "^0.6.1",
     "nodemon": "^1.11.0"
   }
 }
