--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     "password": "raspberry",
     "port": "22",
     
-    "remote_path": "/home/pi/apiRest",
+    "remote_path": "/home/pi/Documents/apiRest",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
