--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,6 +15,7 @@
     "confirm_overwrite_newer": false,
     
     "host": "192.168.25.61",
+    //"host": "192.168.25.138",
     "user": "pi",
     "password": "raspberry",
     "port": "22",
